--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -10,7 +10,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre&family=Madimi+One&family=Roboto+Slab:wght@100..900&display=swap"
 			rel="stylesheet"
 		/>
 		<link
@@ -23,7 +23,7 @@
 		<!-- navbar -->
 		<nav class="navbar">
 			<div class="navbar-left">
-				<a id="navbar-home" href="{% url 'myapp:home' %}">
+				<a id="navbar-home" href="{% url 'home' %}">
 					<img
 						id="brand"
 						src="{% static 'myapp/images/logo.png' %}"
@@ -39,7 +39,7 @@
 				{% if not user.is_authenticated %}
 				<ul class="navbar-nav">
 					<li class="active">
-						<a href="{% url 'register' %}">Registration</a>
+						<a id="register-button" href="{% url 'register' %}">Registration</a>
 					</li>
 				</ul>
 				{% endif %}
@@ -47,15 +47,16 @@
 				{% if not user.is_authenticated %}
 				<ul class="navbar-nav">
 					<li class="active">
-						<a href="{% url 'login' %}">Login</a>
+						<a id="login-button" href="{% url 'login' %}">Login</a>
 					</li>
 				</ul>
 				{% endif %}
 				<!-- show sign out only if user is authenticated -->
-				{% if user.is_authenticated %}
+				{% if user.is_authenticated %} 
+				<p class="account-infos">Logged as {{ user.username }}</p>
 				<ul class="navbar-nav">
 					<li class="active">
-						<a href="{% url 'logout' %}">Sign Out</a>
+						<a id="signout-button" href="{% url 'logout' %}">Sign Out</a>
 					</li>
 				</ul>
 				{% endif %}
