--- a/myapp/templates/myapp/registration.html
+++ b/myapp/templates/myapp/registration.html
@@ -1,35 +1,31 @@
 {% extends "myapp/base.html" %} {% block content %}
-<div class="register-content">
+<div class="form-content">
+	<h2>Register</h2>
 	<!-- Form - User -->
 	<form action="" method="post" class="form-horizontal">
 		{% csrf_token %}
-		<div class="form-group">
+		<div class="user-box">
 			<!-- Errors - username -->
 			{% if form.username.errors %}
 			<label class="alert alert-danger">{{ form.username.errors }}</label>
 			{% endif %}
-
 			<!-- Form field - username -->
-			<input type="text" placeholder="Username" class="form-control"
+			<input type="text"
 			name="username" required value='{{ form.username.value|default:""}}'>
+			<label>Username</label>
 		</div>
-
-		<div class="form-group">
+		<div class="user-box">
 			<!-- Errors - password -->
 			{% if form.password.errors %}
 			<label class="alert alert-danger">{{ form.password.errors }}</label>
 			{% endif %}
-
 			<!-- Form field - password -->
-			<input type="password" placeholder="Password" class="form-control"
-			name="password" required value='{{ form.password.value|default:""}}''>
+			<input type="password"
+			name="password" required value='{{ form.password.value|default:""}}'>
+			<label>Password</label>
 		</div>
-		<div class="form-group">
 			<!-- Submit button -->
-			<button type="submit" class="btn btn-primary btn-block">
-				Submit
-			</button>
-		</div>
+			<input id="submit-button" type="submit" value="submit" />
 	</form>
 </div>
 {% endblock content %}
