--- a/myapp/static/myapp/style.css
+++ b/myapp/static/myapp/style.css
@@ -10,6 +10,9 @@
 	font-size: 18px;
 	overflow: hidden;
 }
+p, h1, h2, h3, h4, h5, h6, li {
+	color: white;
+}
 #content {
 	height: calc(100vh - 50px);
 	background: linear-gradient(#141e30, #243b55);
