--- a/myapp/templates/myapp/login.html
+++ b/myapp/templates/myapp/login.html
@@ -32,27 +32,18 @@
 
 		<!-- Form field - next -->
 		<!-- Used to configure redirect after successful login -->
+		<input type="hidden" name="next" id="nextInput" value="/" />
 		<script>
-			document.addEventListener('DOMContentLoaded', function () {
-				var nextValue = getUrlParameter('next');
-				var nextUrl = nextValue ;
-				var inputNext = document.querySelector('input[name="next"]');
-				nextUrl = nextUrl.endsWith('/')
-					? nextUrl.slice(0, -1)
-					: nextUrl;
-				inputNext.value = nextUrl || "{% url 'home' %}";
-			});
-
-			function getUrlParameter(name) {
-				name = name.replace(/[\[\]]/g, '\\$&');
-				var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
-					results = regex.exec(window.location.href);
-				if (!results) return null;
-				if (!results[2]) return '';
-				return decodeURIComponent(results[2].replace(/\+/g, ' '));
+			var currentUrl = window.location.href;
+			var nextParamIndex = currentUrl.indexOf("next=");
+			if (nextParamIndex !== -1) {
+				var nextParamValue = currentUrl.substring(nextParamIndex + 5);
+				document.getElementById("nextInput").value = decodeURIComponent(nextParamValue);
+			}
+			else{
+				document.getElementById("nextInput").value = "/";
 			}
 		</script>
-		<input type="hidden" name="next" value="/room" />
 	</form>
 </div>
 {% endblock %}
