--- a/myapp/static/myapp/style.css
+++ b/myapp/static/myapp/style.css
@@ -10,7 +10,7 @@
 	font-size: 18px;
 	overflow: hidden;
 }
-p, h1, h2, h3, h4, h5, h6, li {
+p, h1, h2, h3, h4, h5, h6, li, label {
 	color: white;
 }
 #content {
@@ -94,95 +94,96 @@ a {
 	padding-bottom: 10%;
 }
 .form-content {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	width: 400px;
-	padding: 40px;
-	transform: translate(-50%, -50%);
-	background: rgba(0, 0, 0, 0.5);
-	box-sizing: border-box;
-	box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
-	border-radius: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 400px;
+    padding: 40px;
+    transform: translate(-50%, -50%);
+    background: rgba(0, 0, 0, 0.5);
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
 }
 .form-content * {
-	overflow: visible;
+    overflow: visible;
 }
 .form-content h2 {
-	font-size: 50px;
-	margin: 0 0 30px;
-	padding: 0;
-	color: #fff;
-	text-align: center;
+    font-size: 50px;
+    margin: 0 0 30px;
+    padding: 0;
+    color: #fff;
+    text-align: center;
 }
 .form-content .user-box {
-	position: relative;
+    position: relative;
 }
 .form-content .user-box input {
-	width: 100%;
-	padding: 10px 0;
-	color: #fff;
-	margin-bottom: 30px;
-	border: none;
-	border-bottom: 1px solid #fff;
-	outline: none;
-	background: transparent;
+    width: 100%;
+    padding: 10px 0;
+    color: #fff;
+    margin-bottom: 30px;
+    border: none;
+    border-bottom: 1px solid #fff;
+    outline: none;
+    background: transparent;
 }
 .form-content .user-box label {
-	position: absolute;
-	top: 0;
-	left: 0;
-	padding: 10px 0;
-	font-size: 16px;
-	color: #fff;
-	pointer-events: none;
-	transition: 0.5s;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #fff;
+    pointer-events: none;
+    transition: 0.5s;
 }
 .form-content .user-box input:focus ~ label,
 .form-content .user-box input:valid ~ label {
-	top: -20px;
-	left: 0;
-	color: #03e9f4;
-	font-size: 14px;
+    top: -20px;
+    left: 0;
+    color: #03e9f4;
+    font-size: 14px;
 }
 #submit-button {
-	background-color: transparent;
-	width: 40%;
-	position: relative;
-	display: inline-block;
-	padding: 10px 20px;
-	color: #03e9f4;
-	font-size: 16px;
-	text-decoration: none;
-	text-transform: uppercase;
-	overflow: hidden;
-	transition: 0.5s;
-	margin-top: 40px;
-	letter-spacing: 4px;
-	border-radius: 7px;
-	box-shadow: 0 0 10px #03e9f4;
+    background-color: transparent;
+    width: 40%;
+    position: relative;
+    display: inline-block;
+    padding: 10px 20px;
+    color: #03e9f4;
+    font-size: 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: 0.5s;
+    margin-top: 40px;
+    letter-spacing: 4px;
+    border-radius: 7px;
+    box-shadow: 0 0 10px #03e9f4;
 }
 #submit-button:hover {
-	background: #03e9f4;
-	color: #fff;
-	border-radius: 7px;
-	box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4;
+    background: #03e9f4;
+    color: #fff;
+    border-radius: 7px;
+    box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4;
 }
 
 /* TODO Home */
 .home-content {
-	width: 100%;
-	height: 100%;
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	grid-gap: 10px;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
 }
 .room-list,
 .room-creation {
-	display: block;
-	margin: 10%;
-	background: rgba(0, 0, 0, 0.5);
-	box-sizing: border-box;
-	box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
-	border-radius: 10px;
+    padding: 40px;
+    display: block;
+    margin: 10%;
+    background: rgba(0, 0, 0, 0.5);
+    box-sizing: border-box;
+    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+    border-radius: 10px;
 }
