--- a/myapp/templates/myapp/login.html
+++ b/myapp/templates/myapp/login.html
@@ -1,3 +1,5 @@
+<!-- myapp/templates/myapp/login.html -->
+
 {% extends "myapp/base.html" %} {% block content %}
 <div class="form-content">
 	<h2>Login</h2>
