--- a/myapp/templates/myapp/registration.html
+++ b/myapp/templates/myapp/registration.html
@@ -1,3 +1,5 @@
+<!-- myapp/templates/myapp/registration.html -->
+
 {% extends "myapp/base.html" %} {% block content %}
 <div class="form-content">
 	<h2>Register</h2>
