--- a/myapp/static/myapp/style.css
+++ b/myapp/static/myapp/style.css
@@ -4,22 +4,63 @@
 	padding: 0;
 	border: 0;
 	font: inherit;
+	text-decoration: none;
+	list-style-type:none;
 	vertical-align: baseline;
 	font-family: 'Roboto Slab', serif;
 	font-optical-sizing: auto;
 	font-size: 18px;
+}
+html{
 	overflow: hidden;
 }
-p, h1, h2, h3, h4, h5, h6, li, label {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+li,
+label,
+a {
 	color: white;
 }
 #content {
 	height: calc(100vh - 50px);
 	background: linear-gradient(#141e30, #243b55);
 }
-a {
-	color: white;
-	text-decoration: none; /* Supprime le soulignement des liens */
+
+/* TODO Elements réutiilisables */
+button {
+	background-color: transparent;
+	position: relative;
+	display: inline-block;
+	color: #03e9f4;
+	padding: 10px 20px;
+	font-size: 20px;
+	overflow: hidden;
+	transition: 0.5s;
+	border-radius: 7px;
+	box-shadow: 0 0 10px #03e9f4;
+}
+button:hover {
+	background: #03e9f4;
+	color: #fff;
+	border-radius: 7px;
+	box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4;
+}
+.frame {
+	text-align: center;
+	position: absolute;
+	top: calc(50% + 25px);
+	left: 50%;
+	padding: 30px;
+	transform: translate(-50%, -50%);
+	background: rgba(0, 0, 0, 0.5);
+	box-sizing: border-box;
+	box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
+	border-radius: 10px;
 }
 /* ! FIN D'INITIALISATION ! */
 /* * blur effect : https://www.w3schools.com/howto/howto_css_blurred_background.asp */
@@ -31,7 +72,8 @@ a {
 	height: 50px;
 	background-color: #333;
 }
-.navbar-left, #navbar-home {
+.navbar-left,
+#navbar-home {
 	display: flex;
 	align-items: center;
 	float: left;
@@ -63,7 +105,6 @@ a {
 	color: #f2f2f2;
 	text-align: center;
 	padding: 14px 16px;
-	text-decoration: none;
 }
 #register-button:hover {
 	background-color: rgb(123, 150, 239);
@@ -85,105 +126,159 @@ a {
 	vertical-align: top;
 	padding: 11px;
 }
-/* ! FIN NAVBAR ! */
-
-/* TODO Form */
 .alert {
+	font-weight: 600;
 	color: red;
 	font-size: 130%;
 	padding-bottom: 10%;
 }
+/* ! FIN NAVBAR ! */
+
+/* TODO Form */
 .form-content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 400px;
-    padding: 40px;
-    transform: translate(-50%, -50%);
-    background: rgba(0, 0, 0, 0.5);
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
-    border-radius: 10px;
+	width: 400px;
 }
 .form-content * {
-    overflow: visible;
+	overflow: visible;
 }
 .form-content h2 {
-    font-size: 50px;
-    margin: 0 0 30px;
-    padding: 0;
-    color: #fff;
-    text-align: center;
+	font-weight: 600;
+	font-size: 50px;
+	margin: 0 0 30px;
+	padding: 0;
+	color: #fff;
+	text-align: center;
 }
 .form-content .user-box {
-    position: relative;
+	position: relative;
 }
 .form-content .user-box input {
-    width: 100%;
-    padding: 10px 0;
-    color: #fff;
-    margin-bottom: 30px;
-    border: none;
-    border-bottom: 1px solid #fff;
-    outline: none;
-    background: transparent;
+	width: 100%;
+	padding: 10px 0;
+	color: #fff;
+	margin-bottom: 30px;
+	border: none;
+	border-bottom: 1px solid #fff;
+	outline: none;
+	background: transparent;
 }
 .form-content .user-box label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #fff;
-    pointer-events: none;
-    transition: 0.5s;
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 10px 0;
+	font-size: 20px;
+	color: #fff;
+	pointer-events: none;
+	transition: 0.5s;
 }
 .form-content .user-box input:focus ~ label,
 .form-content .user-box input:valid ~ label {
-    top: -20px;
-    left: 0;
-    color: #03e9f4;
-    font-size: 14px;
+	top: -20px;
+	left: 0;
+	color: #03e9f4;
+	font-size: 14px;
 }
 #submit-button {
-    background-color: transparent;
-    width: 40%;
-    position: relative;
-    display: inline-block;
-    padding: 10px 20px;
-    color: #03e9f4;
-    font-size: 16px;
-    text-decoration: none;
-    text-transform: uppercase;
-    overflow: hidden;
-    transition: 0.5s;
-    margin-top: 40px;
-    letter-spacing: 4px;
-    border-radius: 7px;
-    box-shadow: 0 0 10px #03e9f4;
-}
-#submit-button:hover {
-    background: #03e9f4;
-    color: #fff;
-    border-radius: 7px;
-    box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4;
+	width: 100%;
+	margin-top: 20px;
 }
 
 /* TODO Home */
 .home-content {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px;
+	text-align: center;
+	width: 70%;
+	height: 80%;
 }
-.room-list,
 .room-creation {
-    padding: 40px;
-    display: block;
-    margin: 10%;
-    background: rgba(0, 0, 0, 0.5);
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
-    border-radius: 10px;
+	overflow: visible;
+}
+.room-creation form {
+	overflow: visible;
+	display: inline-block;
+}
+#code-input {
+	width: 100px;
+	display: inline-block;
+	padding: 10px 0;
+	color: #fff;
+	border: none;
+	border-bottom: 1px solid #fff;
+	outline: none;
+	background: transparent;
+}
+#join-room-form {
+	width: 40%;
+}
+#create-room-form button {
+	margin: 0%;
+}
+.room-creation form button {
+	font-size: 16px;
+	margin-left: 10px;
+}
+.room-list {
+	display: grid;
+	grid-template-columns: repeat(1, 1fr);
+	grid-gap: 10px;
+}
+.room-line-content * {
+	padding: 10px;
+	display: inline-flex;
+}
+.room-line-content form {
+	float: right;
+}
+.room-line-content form button {
+	display: inline-flex;
+	font-size: 16px;
+}
+.room-line-content form button:hover {
+	box-shadow: 0 0 10px #03e9f4;
+}
+/* TODO Error page */
+.error-content {
+	width: 60%;
+}
+.error-content * {
+	overflow: visible;
+}
+.error-content h1 {
+	font-size: 50px;
+	margin: 0 0 30px;
+	padding: 0;
+	text-align: center;
+}
+.error-content .user-box {
+	position: relative;
+}
+.error-content .user-box input {
+	width: 100%;
+	padding: 10px 0;
+	color: #fff;
+	margin-bottom: 30px;
+	border: none;
+	border-bottom: 1px solid #fff;
+	outline: none;
+	background: transparent;
+}
+.error-content .user-box label {
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 10px 0;
+	font-size: 20px;
+	color: #fff;
+	pointer-events: none;
+	transition: 0.5s;
+}
+.error-content .user-box input:focus ~ label,
+.error-content .user-box input:valid ~ label {
+	top: -20px;
+	left: 0;
+	color: #03e9f4;
+	font-size: 14px;
+}
+#back-to-home {
+	margin-top: 40px;
 }
