--- a/myapp/templates/myapp/room.html
+++ b/myapp/templates/myapp/room.html
@@ -1,20 +1,22 @@
 <!-- myapp/templates/myapp/room.html -->
 
 {% extends "myapp/base.html" %} {% block content %}
-<div class="room-content">
-	<ul>
-		{% for username in usernames %}
-		<li>{{ username }}</li>
-		{% endfor %}
-	</ul>
+<div class="frame">
+	<div class="room-content">
+		<ul>
+			{% for username in usernames %}
+			<li>{{ username }}</li>
+			{% endfor %}
+		</ul>
+	</div>
+	<form action="" method="post">
+		{% csrf_token %}
+		<button type="submit" name="launch">Launch the game</button>
+	</form>
+	<form action="/leave/{{ room_id }}/" method="post">
+		{% csrf_token %}
+		<h2>Code : {{ room_id }}</h2>
+		<button type="submit">Leave the room</button>
+	</form>
 </div>
-<form action="" method="post">
-    {% csrf_token %}
-    <button type="submit" name="launch">Launch the game</button>
-</form>
-<form action="/leave/{{ room_id }}/" method="post">
-	{% csrf_token %}
-	<h2>Code : {{ room_id }}</h2>
-	<button type="submit">Leave the room</button>
-</form>
 {% endblock content %}
