--- a/myapp/static/myapp/style.css
+++ b/myapp/static/myapp/style.css
@@ -1,18 +1,34 @@
+/** myapp/static/myapp/style.css */
 /* ! INITIALISATION ! */
+:root {
+	--main-color: #03e9f4;
+	--background-color: #141e30;
+	--background-second-color: #243b55;
+}
 * {
 	margin: 0;
 	padding: 0;
 	border: 0;
 	font: inherit;
 	text-decoration: none;
-	list-style-type:none;
+	list-style-type: none;
 	vertical-align: baseline;
 	font-family: 'Roboto Slab', serif;
 	font-optical-sizing: auto;
 	font-size: 18px;
 }
-html{
+html {
 	overflow: hidden;
+}
+h1 {
+	font-weight: 600;
+	font-size: 50px;
+	margin: 0 0 30px;
+	padding: 0;
+	text-align: center;
+}
+h2 {
+	font-size: 35px;
 }
 p,
 h1,
@@ -23,32 +39,54 @@ h5,
 h6,
 li,
 label,
-a {
+a,
+input {
 	color: white;
 }
 #content {
 	height: calc(100vh - 50px);
-	background: linear-gradient(#141e30, #243b55);
+	background: linear-gradient(
+		var(--background-color),
+		var(--background-second-color)
+	);
 }
 
 /* TODO Elements réutiilisables */
+input {
+	border: none;
+	border-bottom: 1px solid #fff;
+	outline: none;
+	background: transparent;
+}
 button {
 	background-color: transparent;
 	position: relative;
 	display: inline-block;
-	color: #03e9f4;
+	color: var(--main-color);
 	padding: 10px 20px;
 	font-size: 20px;
 	overflow: hidden;
-	transition: 0.5s;
+	transition: 0.35s;
 	border-radius: 7px;
-	box-shadow: 0 0 10px #03e9f4;
+	box-shadow: 0 0 10px var(--main-color);
 }
 button:hover {
-	background: #03e9f4;
+	background: var(--main-color);
 	color: #fff;
 	border-radius: 7px;
-	box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4;
+	box-shadow: 0 0 5px var(--main-color), 0 0 25px var(--main-color);
+}
+.green-button:hover {
+	background: green;
+	color: #fff;
+	border-radius: 7px;
+	box-shadow: 0 0 5px green, 0 0 25px green;
+}
+.red-button:hover {
+	background: red;
+	color: #fff;
+	border-radius: 7px;
+	box-shadow: 0 0 5px red, 0 0 25px red;
 }
 .frame {
 	text-align: center;
@@ -91,7 +129,7 @@ button:hover {
 }
 /* TODO Log button */
 .navbar-right {
-	float: right; /* Alignement à droite */
+	float: right;
 	display: flex;
 	align-items: center;
 	height: 50px;
@@ -141,26 +179,13 @@ button:hover {
 .form-content * {
 	overflow: visible;
 }
-.form-content h2 {
-	font-weight: 600;
-	font-size: 50px;
-	margin: 0 0 30px;
-	padding: 0;
-	color: #fff;
-	text-align: center;
-}
 .form-content .user-box {
 	position: relative;
 }
 .form-content .user-box input {
 	width: 100%;
 	padding: 10px 0;
-	color: #fff;
 	margin-bottom: 30px;
-	border: none;
-	border-bottom: 1px solid #fff;
-	outline: none;
-	background: transparent;
 }
 .form-content .user-box label {
 	position: absolute;
@@ -168,7 +193,6 @@ button:hover {
 	left: 0;
 	padding: 10px 0;
 	font-size: 20px;
-	color: #fff;
 	pointer-events: none;
 	transition: 0.5s;
 }
@@ -176,7 +200,7 @@ button:hover {
 .form-content .user-box input:valid ~ label {
 	top: -20px;
 	left: 0;
-	color: #03e9f4;
+	color: var(--main-color);
 	font-size: 14px;
 }
 #submit-button {
@@ -186,68 +210,66 @@ button:hover {
 
 /* TODO Home */
 .home-content {
-	text-align: center;
+	display: block;
 	width: 70%;
 	height: 80%;
 }
-.room-creation {
-	overflow: visible;
-}
 .room-creation form {
-	overflow: visible;
 	display: inline-block;
 }
 #code-input {
 	width: 100px;
 	display: inline-block;
 	padding: 10px 0;
-	color: #fff;
-	border: none;
-	border-bottom: 1px solid #fff;
-	outline: none;
-	background: transparent;
-}
-#join-room-form {
-	width: 40%;
-}
-#create-room-form button {
-	margin: 0%;
 }
 .room-creation form button {
 	font-size: 16px;
 	margin-left: 10px;
 }
 .room-list {
+	height: calc(100% - 50px);
 	display: grid;
+	text-align: left;
 	grid-template-columns: repeat(1, 1fr);
-	grid-gap: 10px;
+	grid-gap: 50px;
+	overflow-y: auto;
+	max-height: 100%;
+	padding-right: 10px; /* Largeur de l'ascensseur */
 }
-.room-line-content * {
+.room-line-content {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	padding: 10px;
-	display: inline-flex;
-}
-.room-line-content form {
-	float: right;
+	border-bottom: 1px solid #ffffff3c;
 }
 .room-line-content form button {
-	display: inline-flex;
 	font-size: 16px;
+	width: 120px;
 }
 .room-line-content form button:hover {
-	box-shadow: 0 0 10px #03e9f4;
+	box-shadow: 0 0 5px var(--main-color), 0 0 10px var(--main-color);
 }
-/* TODO Error page */
+.player-list-line {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+.player-list-line li {
+	margin-right: 10px;
+}
+.room-line-content form {
+	margin-left: 20px;
+}
+.username-line {
+	margin: 0px 10px;
+}
+/* TODO Error */
 .error-content {
 	width: 60%;
 }
 .error-content * {
 	overflow: visible;
-}
-.error-content h1 {
-	font-size: 50px;
-	margin: 0 0 30px;
-	padding: 0;
-	text-align: center;
 }
 .error-content .user-box {
 	position: relative;
@@ -255,12 +277,7 @@ button:hover {
 .error-content .user-box input {
 	width: 100%;
 	padding: 10px 0;
-	color: #fff;
 	margin-bottom: 30px;
-	border: none;
-	border-bottom: 1px solid #fff;
-	outline: none;
-	background: transparent;
 }
 .error-content .user-box label {
 	position: absolute;
@@ -268,7 +285,6 @@ button:hover {
 	left: 0;
 	padding: 10px 0;
 	font-size: 20px;
-	color: #fff;
 	pointer-events: none;
 	transition: 0.5s;
 }
@@ -276,9 +292,35 @@ button:hover {
 .error-content .user-box input:valid ~ label {
 	top: -20px;
 	left: 0;
-	color: #03e9f4;
+	color: var(--main-color);
 	font-size: 14px;
 }
 #back-to-home {
 	margin-top: 40px;
+}
+
+/* TODO Room */
+.room-content {
+	width: 70%;
+	height: 80%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+}
+.username-list {
+	margin: 10px 0;
+}
+.room-buttons {
+	margin-top: 20px;
+	display: flex;
+	justify-content: center;
+}
+.room-buttons form {
+	width: 150px;
+	margin: 0 10px;
+}
+.room-buttons button {
+	padding: 10px 20px;
+	width: 100%;
 }
