add variable for some colors

--- a/myapp/static/myapp/style.css
+++ b/myapp/static/myapp/style.css
@@ -2,6 +2,9 @@
 /* ! INITIALISATION ! */
 :root {
 	--main-color: #03e9f4;
+	--green-color: #47f403;
+	--red-color: #f40303;
+	--red-text-color: #be0202;
 	--background-color: #141e30;
 	--background-second-color: #243b55;
 }
@@ -77,16 +80,16 @@ button:hover {
 	box-shadow: 0 0 5px var(--main-color), 0 0 25px var(--main-color);
 }
 .green-button:hover {
-	background: green;
+	background: var(--green-color);
 	color: #fff;
 	border-radius: 7px;
-	box-shadow: 0 0 5px green, 0 0 25px green;
+	box-shadow: 0 0 5px var(--green-color), 0 0 25px var(--green-color);
 }
 .red-button:hover {
-	background: red;
+	background: var(--red-color);
 	color: #fff;
 	border-radius: 7px;
-	box-shadow: 0 0 5px red, 0 0 25px red;
+	box-shadow: 0 0 5px var(--red-color), 0 0 25px var(--red-color);
 }
 .frame {
 	text-align: center;
@@ -166,7 +169,7 @@ button:hover {
 }
 .alert {
 	font-weight: 600;
-	color: red;
+	color: var(--red-text-color);
 	font-size: 130%;
 	padding-bottom: 10%;
 }
