Adding websocket for home and room

--- a/myapp/templates/myapp/room.html
+++ b/myapp/templates/myapp/room.html
@@ -1,9 +1,62 @@
 <!-- myapp/templates/myapp/room.html -->
 
 {% extends "myapp/base.html" %} {% block content %}
+<script>
+	var socket = new ReconnectingWebSocket(
+		'ws://localhost:8001/ws/room_updates/'
+	);
+	socket.onmessage = function (event) {
+		var data = JSON.parse(event.data);
+		// dataExample = {message: "update_rooms", data: {code: "H668Q6", usernames: ["Sydnec", "Player1"], message: "join"}}
+		if (data.message === 'update_rooms') {
+			var roomData = data.data;
+			updateRoomList(roomData);
+		}
+
+		function updateRoomList(roomData) {
+			switch (roomData.message) {
+				case 'leave':
+					document
+						.querySelectorAll('.username-list')
+						.forEach(function (element) {
+							if (
+								roomData.usernames.includes(
+									element.textContent
+								) === false
+							) {
+								element.remove();
+							}
+						});
+					break;
+				case 'join':
+					document
+						.querySelectorAll('.username-list')
+						.forEach(function (element) {
+							element.remove();
+						});
+					roomData.usernames.forEach(function (username) {
+						var liElement = document.createElement('li');
+						liElement.className = 'username-list';
+						liElement.textContent = username;
+						var roomUserList = document.querySelector(
+							'#room-username-list'
+						);
+						roomUserList.appendChild(liElement);
+					});
+					break;
+				case 'delete':
+					window.location.href = '/';
+					break;
+
+				default:
+					break;
+			}
+		}
+	};
+</script>
 <div class="room-content frame">
-	<h1>{{ room_id }}</h2>
-	<ul>
+	<h1>{{ room_id }}</h1>
+	<ul id="room-username-list">
 		{% for username in usernames %}
 		<li class="username-list">{{ username }}</li>
 		{% endfor %}
