--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -68,6 +68,7 @@
 			</div>
 		</nav>
 
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/reconnecting-websocket/1.0.0/reconnecting-websocket.min.js"></script>
 		<div id="content">{% block content %}{% endblock %}</div>
 	</body>
 </html>
