--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -69,6 +69,8 @@
 		</nav>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/reconnecting-websocket/1.0.0/reconnecting-websocket.min.js"></script>
-		<div id="content">{% block content %}{% endblock %}</div>
+		<div id="content">
+			{% block content %}{% endblock %}
+		</div>
 	</body>
 </html>
